--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -15,11 +15,16 @@ spec:
       containers:
       - name: microservice2
         image: my-app-image
+        resources:
+              requests:
+                cpu: "2000m"
+                memory: "2Gi"
         ports:
           - containerPort: 80
-        #readinessProbe:
-         # failureThreshold: 3
-          #httpGet:
-           # path: /readiness
-            #port: 80
-            #scheme: HTTP
+        readinessProbe:
+          failureThreshold: 3
+          initialDelaySeconds: 120
+          httpGet:
+            path: /readiness
+            port: 80
+            scheme: HTTP
