--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,29 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: microservice2
+  name: microservice1
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: microservice2
+      app: microservice1
   template:
     metadata:
       labels:
-        app: microservice2
+        app: microservice1
     spec:
+      #nodeSelector:
+       # cloud.google.com/compute-class: "Scale-Out"
       containers:
-      - name: microservice2
+      - name: microservice1
         image: my-app-image
         resources:
               requests:
                 cpu: "2000m"
                 memory: "2Gi"
+              limits:
+                memory: "2Gi"
+                cpu: "2000m"
         ports:
           - containerPort: 80
         readinessProbe:
           failureThreshold: 3
-          initialDelaySeconds: 120
+          initialDelaySeconds: 30
           httpGet:
             path: /readiness
             port: 80
