--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.15.3",
+    "firebase-admin": "^11.3.0",
     "nodemon": "^1.11.0"
   }
 }
