--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -19,16 +19,16 @@ spec:
         image: my-app-image
         resources:
               requests:
-                cpu: "2000m"
-                memory: "2Gi"
+                cpu: "4000m"
+                memory: "4Gi"
               limits:
-                memory: "2Gi"
-                cpu: "2000m"
+                memory: "4Gi"
+                cpu: "4000m"
         ports:
           - containerPort: 80
         readinessProbe:
           failureThreshold: 3
-          initialDelaySeconds: 30
+         # initialDelaySeconds: 30
           httpGet:
             path: /readiness
             port: 80
